--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,8 @@
 .wh-full {
   background: rgba(0, 0, 0, 0.5) !important;
 }
+.text-center img[src="/app/assets/images/occultum-logo.webp"],
+.mb-1em.max-w-100% {
+  height: 40px !important;
+  width: auto !important; /* 保持宽高比 */
+}
