--- a/app/global.css
+++ b/app/global.css
@@ -2,7 +2,7 @@
   background: rgba(0, 0, 0, 0.5) !important;
 }
 .text-center img[src="/app/assets/images/occultum-logo.webp"],
-.mb-1em.max-w-100% {
+.mb-1em.max-w-100%.max-w-full {
   height: 40px !important;
   width: auto !important; /* 保持宽高比 */
 }
