--- a/app/global.css
+++ b/app/global.css
@@ -3,6 +3,6 @@
 }
 .text-center img[src="/app/assets/images/occultum-logo.webp"],
 .mb-1em.max-w-100%.max-w-full {
-  height: 40px !important;
-  width: auto !important; /* 保持宽高比 */
+  max-width: 80% !important; /* 替换 max-width: 100% 为 80% */
+  height: auto !important; /* 保持宽高比 */
 }
