--- a/app/global.css
+++ b/app/global.css
@@ -2,7 +2,9 @@
   background: rgba(0, 0, 0, 0.5) !important;
 }
 .text-center img[src="/app/assets/images/occultum-logo.webp"],
-.mb-1em.max-w-100%.max-w-full {
-  max-width: 80% !important; /* 替换 max-width: 100% 为 80% */
-  height: auto !important; /* 保持宽高比 */
+.mb-1em,
+.max-w-100%,
+.max-w-full {
+  max-width: 80% !important;
+  height: auto !important;
 }
