--- a/app/global.css
+++ b/app/global.css
@@ -4,7 +4,7 @@
 .text-center img[src="/app/assets/images/occultum-logo.webp"],
 .mb-1em,
 .max-w-100%,
-.max-w-full {
+.wh-full .text-center img {
   max-width: 80% !important;
   height: auto !important;
 }
