--- a/app/global.css
+++ b/app/global.css
@@ -2,6 +2,8 @@
   background: rgba(0, 0, 0, 0.5) !important;
 }
 .text-center img[src="/app/assets/images/occultum-logo.webp"],
+.mb-1em,
+.max-w-100%,
 .wh-full .text-center img {
   max-width: 80% !important;
   height: auto !important;
